# springheadSrcUniversal

./: .gitmodules.save  README.md  compile Command
core/include/: SprUseClosedSrcOrNot.h
core/src/Base/: Base.vcxproj  Base.vcxproj.filters  CMakeLists.txt  Makefile  cmake_install.cmake
core/src/Base/Base.dir/Debug/: Base.vcxproj.FileListAbsolute.txt
core/src/Collision/: CDGJK.cpp  CMakeLists.txt  Collision.i  Collision.vcxproj  Collision.vcxproj.filters  CollisionDecl.hpp  CollisionStub.cpp  CollisionStub.makefile  Makefile  SprCollisionDecl.hpp  cmake_install.cmake
core/src/Collision/Collision.dir/Debug/: Collision.vcxproj.FileListAbsolute.txt
core/src/Creature/: Creature.i  CreatureDecl.hpp  CreatureStub.cpp  CreatureStub.makefile  SprCreatureDecl.hpp
core/src/FileIO/: FileIO.i  FileIODecl.hpp  FileIOStub.cpp  FileIOStub.makefile  SprFileIODecl.hpp
core/src/Foundation/: CMakeLists.txt  Foundation.i  Foundation.vcxproj  Foundation.vcxproj.filters  FoundationDecl.hpp  FoundationStub.cpp  FoundationStub.makefile  Makefile  Object.cpp  Scene.cpp  SprFoundationDecl.hpp  UTDllLoader.cpp  UTQPTimer.cpp  UTSocket.cpp  UTTimer.cpp  UTTypeDesc.cpp  cmake_install.cmake
core/src/Foundation/Foundation.dir/Debug/: Foundation.vcxproj.FileListAbsolute.txt
core/src/Framework/: Framework.i  FrameworkDecl.hpp  FrameworkStub.cpp  FrameworkStub.makefile  SprFrameworkDecl.hpp
core/src/Graphics/: Graphics.i  GraphicsDecl.hpp  GraphicsStub.cpp  GraphicsStub.makefile  SprGraphicsDecl.hpp
core/src/HumanInterface/: HumanInterface.i  HumanInterfaceDecl.hpp  HumanInterfaceStub.cpp  HumanInterfaceStub.makefile  SprHumanInterfaceDecl.hpp
core/src/Physics/: CMakeLists.txt  Makefile  PHContactDetector.cpp  PHFemEngine.cpp  PHFemMesh.cpp  PHFemMeshNew.cpp  PHFemMeshThermo.cpp  PHFemPorousWOMove.cpp  PHFemThermo.cpp  PHFemVibration.cpp  PHIKEngine.cpp  PHOpHapticController.cpp  Physics.i  Physics.vcxproj  Physics.vcxproj.filters  PhysicsDecl.hpp  PhysicsStub.cpp  PhysicsStub.makefile  SprPhysicsDecl.hpp  cmake_install.cmake
core/src/Physics/Physics.dir/Debug/: Physics.vcxproj.FileListAbsolute.txt
core/src/RunSwig/: RunSwig_method.py
core/src/SprCSharp/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Makefile_CSharp.swig.Base  Makefile_CSharp.swig.Collision  Makefile_CSharp.swig.Creature  Makefile_CSharp.swig.FileIO  Makefile_CSharp.swig.Foundation  Makefile_CSharp.swig.Framework  Makefile_CSharp.swig.Graphics  Makefile_CSharp.swig.HumanInterface  Makefile_CSharp.swig.Physics  SprCSharp16.0.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
core/src/SprCSharp/Base/: Base.vcxproj  Base.vcxproj.filters  cmake_install.cmake
core/src/SprCSharp/Collision/: Collision.vcxproj  Collision.vcxproj.filters  cmake_install.cmake
core/src/SprCSharp/Foundation/: Foundation.vcxproj  Foundation.vcxproj.filters  cmake_install.cmake
core/src/SprCSharp/NameManager/: NameManager.bat  NameManager.vcxproj  NameManager.vcxproj.filters  cmake_install.cmake
core/src/SprCSharp/Physics/: Physics.vcxproj  Physics.vcxproj.filters  cmake_install.cmake
core/src/SprCSharp/RunSwig_CSharp/: all_projs.bat  module.depts
core/src/SprCSharp/SprCSharp/: CSCollision.cs  CSFoundation.cs  SprCSharp16.0.csproj
core/src/SprCSharp/SprCSharp/tmp/: arraywrapper_GRMeshFace.cs  arraywrapper_PHOpGroupDesc.cs  arraywrapper_PHOpObjDesc.cs  arraywrapper_PHOpParticleDesc.cs  arraywrapper_PHRaycastHit.cs  arraywrapper_Vec2f.cs  arraywrapper_Vec3f.cs  arraywrapper_Vec4f.cs  structwrapper_Affinef.cs  structwrapper_CDShapeIf_p.cs  structwrapper_GRVertexElement.cs  structwrapper_Matrix3d.cs  structwrapper_Matrix3f.cs  structwrapper_PHHapticPointerDesc_HapticRenderMode.cs  structwrapper_PHMaterial.cs  structwrapper_PHOpHapticControllerDesc_HapticDOFType.cs  structwrapper_PHSolidIf_p.cs  structwrapper_Posed.cs  structwrapper_Posef.cs  structwrapper_Quaterniond.cs  structwrapper_Quaternionf.cs  structwrapper_Vec2d.cs  structwrapper_Vec2f.cs  structwrapper_Vec3d.cs  structwrapper_Vec3f.cs  structwrapper_Vec3f_p.cs  structwrapper_Vec3i.cs  structwrapper_Vec4d.cs  structwrapper_Vec4f.cs  structwrapper_Vec6d.cs  vectorwrapper_GRAnimationKey.cs  vectorwrapper_GRKey.cs  vectorwrapper_GRMeshFace.cs  vectorwrapper_HISpidarMotorDesc.cs  vectorwrapper_PHPathPoint.cs  vectorwrapper_PHSplineLimitNode.cs  vectorwrapper_Vec2f.cs  vectorwrapper_Vec3d.cs  vectorwrapper_Vec3f.cs  vectorwrapper_Vec4f.cs
core/src/SprCSharp/SprExport/: CMakeLists.txt  CSBase.cpp  CSCollision.cpp  CSCreature.cpp  CSFileIO.cpp  CSFoundation.cpp  CSFramework.cpp  CSGraphics.cpp  CSHumanInterface.cpp  CSPhysics.cpp  CSUtility.cpp  SprExport16.0.vcxproj  SprExport16.0.vcxproj.filters  cmake_install.cmake  module.wrapper.cpp  wrapper.cpp
core/src/SprCSharp/SprExport/tmp/: arraywrapper_GRMeshFace.cpp  arraywrapper_PHOpGroupDesc.cpp  arraywrapper_PHOpObjDesc.cpp  arraywrapper_PHOpParticleDesc.cpp  arraywrapper_PHRaycastHit.cpp  arraywrapper_Vec2f.cpp  arraywrapper_Vec3f.cpp  arraywrapper_Vec4f.cpp  structwrapper_PHHapticPointerDesc_HapticRenderMode.cpp  structwrapper_PHOpHapticControllerDesc_HapticDOFType.cpp  vectorwrapper_GRAnimationKey.cpp  vectorwrapper_GRKey.cpp  vectorwrapper_GRMeshFace.cpp  vectorwrapper_HISpidarMotorDesc.cpp  vectorwrapper_PHPathPoint.cpp  vectorwrapper_PHSplineLimitNode.cpp  vectorwrapper_Vec2f.cpp  vectorwrapper_Vec3d.cpp  vectorwrapper_Vec3f.cpp  vectorwrapper_Vec4f.cpp
core/src/SprCSharp/SprImport/: CSCollision.cs  CSCreature.cs  CSFileIO.cs  CSFoundation.cs  CSFramework.cs  CSGraphics.cs  CSHumanInterface.cs  CSPhysics.cs  module.wrapper.cs
core/src/SprCSharp/SprImport/tmp/: arraywrapper_GRMeshFace.cs  arraywrapper_PHOpGroupDesc.cs  arraywrapper_PHOpObjDesc.cs  arraywrapper_PHOpParticleDesc.cs  arraywrapper_PHRaycastHit.cs  arraywrapper_Vec2f.cs  arraywrapper_Vec3f.cs  arraywrapper_Vec4f.cs  structwrapper_Affinef.cs  structwrapper_CDShapeIf_p.cs  structwrapper_GRVertexElement.cs  structwrapper_Matrix3d.cs  (+28 more)
core/src/SprCSharp/TargetManager/: TargetManager.vcxproj  TargetManager.vcxproj.filters  cmake_install.cmake
(+4 files in other folders)
